fix warning deps for doc

--- a/docs/package.json
+++ b/docs/package.json
@@ -26,19 +26,19 @@
         "url": "https://github.com/MkLHX/AP_STA_RPI_SAME_WIFI_CHIP"
     },
     "dependencies": {
-        "bootstrap": "4.3.1",
-        "jquery": "3.5.0"
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.6.0"
     },
     "devDependencies": {
-        "browser-sync": "2.26.7",
-        "del": "5.1.0",
-        "gulp": "4.0.2",
-        "gulp-autoprefixer": "7.0.0",
-        "gulp-clean-css": "4.2.0",
-        "gulp-header": "2.0.9",
+        "browser-sync": "^2.27.9",
+        "del": "^6.0.0",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-clean-css": "^4.2.0",
+        "gulp-header": "^2.0.9",
         "gulp-plumber": "^1.2.1",
-        "gulp-rename": "1.4.0",
-        "gulp-sass": "4.0.2",
-        "merge-stream": "2.0.0"
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^5.1.0",
+        "merge-stream": "^2.0.0"
     }
 }
